# CmakeSkeleton

./: .gitignore  CMakeLists.txt  README.md
lib/hello_world-1.0/: CMakeLists.txt
lib/hello_world-1.0/include/: hello_world.h
lib/hello_world-1.0/src/: hello_world.cpp
src/: CMakeLists.txt  main.cpp
